--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -22,7 +22,7 @@
 
 .ReactTable .rt-thead .rt-th {
   color: #000 !important;
-  background: #d2faf4 !important; }
+  background: #c1fff9 !important; }
   .ReactTable .rt-thead .rt-th .style_Label {
     font-weight: 500 !important;
     white-space: pre-line !important;
@@ -43,16 +43,16 @@
     overflow: inherit !important;
     white-space: inherit !important; }
   .ReactTable .rt-tbody .rowHighliter .rt-td {
-    background: #8ef2e4 !important; }
+    background: #74fff1 !important; }
     .ReactTable .rt-tbody .rowHighliter .rt-td:hover {
-      background: #8ef2e4 !important; }
+      background: #74fff1 !important; }
   .ReactTable .rt-tbody .textCapitalize {
     text-transform: capitalize; }
     .ReactTable .rt-tbody .textCapitalize input {
       text-transform: capitalize; }
 
 .ReactTable .-btn {
-  background: #12a28d !important;
+  background: #00a796 !important;
   color: #fff !important;
   font-size: 0.8em; }
 
@@ -93,7 +93,7 @@
 .ReactTable .fa-thumbs-up,
 .ReactTable .fa-thumbs-down {
   cursor: pointer;
-  border: 1px solid #17d0b5;
+  border: 1px solid #00dac4;
   height: 28px;
   border-radius: 100%;
   width: 28px;
@@ -123,7 +123,7 @@
 .ReactTable .fa-arrow-right:hover,
 .ReactTable .fa-plus:hover,
 .ReactTable .fa-thumbs-up:hover {
-  background: #12a28d;
+  background: #00a796;
   color: #fff; }
 
 .ReactTable .fa-thumbs-down:hover {
@@ -139,7 +139,7 @@
   color: #000; }
 
 .ui.search .resultSecStyles .price {
-  color: #12a28d;
+  color: #00a796;
   font-size: 1.2rem; }
 
 .ui.search .resultSecStyles small {
