--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -9,6 +9,7 @@ $subMenu: 0.85rem;
 
 //App Colors
 
-$primary-color: #12a28d;
+$primary-color: #00a796;
+$secondary-color: #f58220;
 $color-white: #fff;
 $color-black: #000;
