--- a/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
+++ b/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
@@ -6,13 +6,13 @@
     text-align: left;
     cursor: pointer; }
   .EmployeeDocumentsScreen .documentFor .list-group-item.active {
-    background-color: #12a28d;
-    border-color: #12a28d; }
+    background-color: #00a796;
+    border-color: #00a796; }
     .EmployeeDocumentsScreen .documentFor .list-group-item.active .badge-primary {
       background-color: #fff;
-      color: #12a28d; }
+      color: #00a796; }
   .EmployeeDocumentsScreen .documentFor .badge-primary {
-    background-color: #12a28d; }
+    background-color: #00a796; }
   .EmployeeDocumentsScreen .documentFor span {
     display: block; }
 
@@ -34,8 +34,8 @@
     margin-bottom: 10px;
     display: inline-block; }
   .EmployeeDocumentsScreen .upload-drop-zone:hover {
-    border-color: #12a28d;
-    background: #8ef2e4; }
+    border-color: #00a796;
+    background: #74fff1; }
 
 .EmployeeDocumentsScreen #EmployeeDocumentGrid .ReactTable {
   max-height: 50vh !important; }
