--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.css
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.css
@@ -45,7 +45,7 @@
       margin: 0;
       padding: 0; }
       .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeName p b {
-        color: #12a28d;
+        color: #00a796;
         font-size: 0.9em;
         font-weight: 700; }
   .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic {
@@ -63,7 +63,7 @@
         text-align: center;
         width: 20px; }
       .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic span b {
-        color: #12a28d; }
+        color: #00a796; }
   .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail {
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
@@ -73,7 +73,7 @@
     .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail span {
       display: block; }
       .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail span b {
-        color: #12a28d; }
+        color: #00a796; }
   .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeVital {
     max-width: 33%;
     line-height: 1.3rem;
@@ -84,7 +84,7 @@
       display: inline-block;
       margin-right: 8px; }
       .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .EmployeeVital span b {
-        color: #12a28d; }
+        color: #00a796; }
   .selfServiceModule .EmployeeProfile .EmployeeInfo-Top .moreAction {
     float: right;
     border-right: 1px solid #e1e1e1;
@@ -114,7 +114,7 @@
       .selfServiceModule .EmployeeTopNav .tabMaster ul li:after {
         display: block;
         content: "";
-        border-bottom: 3px solid #12a28d;
+        border-bottom: 3px solid #00a796;
         transform: scaleX(0);
         transition: transform 150ms ease-in-out; }
       .selfServiceModule .EmployeeTopNav .tabMaster ul li:hover:after {
@@ -125,9 +125,9 @@
         color: #858585;
         cursor: pointer; }
       .selfServiceModule .EmployeeTopNav .tabMaster ul li span.active {
-        border-bottom: 3px solid #12a28d;
+        border-bottom: 3px solid #00a796;
         color: #fff;
-        background: #12a28d; }
+        background: #00a796; }
         .selfServiceModule .EmployeeTopNav .tabMaster ul li span.active:hover {
           cursor: default;
           color: #fff; }
@@ -136,7 +136,7 @@
           border: none !important;
           cursor: pointer; }
     .selfServiceModule .EmployeeTopNav .tabMaster .Employee-quick-info {
-      color: #12a28d;
+      color: #00a796;
       margin: 0;
       padding: 0;
       list-style: none;
