--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,7 +107,7 @@
     :global .print-body .tableForData {
       width: 100%;
       border-collapse: collapse;
-      border: 1px solid #17d0b5;
+      border: 1px solid #00dac4;
       font-weight: normal; }
     :global .print-body .tableForData thead {
       margin: 0;
@@ -123,14 +123,14 @@
       border-bottom: 2px dashed #979797;
       padding: 5px 3px; }
     :global .print-body .tableForData th {
-      border-bottom: 2px solid #12a28d !important;
+      border-bottom: 2px solid #00a796 !important;
       vertical-align: middle !important;
       background-color: #e8feff !important;
       padding: 5px;
       font-size: 0.8em;
       text-transform: uppercase;
       text-align: center;
-      border-right: 1px solid #0d7465; }
+      border-right: 1px solid #007468; }
     :global .print-body .tableForData td {
       border: 1px solid #ccc;
       padding: 3px;
@@ -190,7 +190,7 @@
     -webkit-border-radius: 3px;
     border-radius: 3px; }
   :global ::-webkit-scrollbar-thumb {
-    background: #17d0b5;
+    background: #00dac4;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5); }
@@ -199,8 +199,8 @@
   :global .displayInlineBlock {
     display: inline-block; }
   :global .greenCell {
-    background-color: #b2f6ed !important;
-    color: #12a28d !important;
+    background-color: #9dfff5 !important;
+    color: #00a796 !important;
     text-decoration: underline !important; }
   :global .cancelledClass {
     background-color: #ff400080 !important;
@@ -292,7 +292,7 @@
         width: 0;
         height: 0;
         border-top: 8px solid #f5232300;
-        border-left: 8px solid #17d0b5;
+        border-left: 8px solid #00dac4;
         border-right: 8px solid transparent;
         border-bottom: 8px solid #e8e8e800;
         clear: both; }
@@ -339,7 +339,7 @@
       text-align: center; }
   :global .caption.caption-green .caption-subject,
   :global .caption.caption-green i {
-    color: #17d0b5;
+    color: #00dac4;
     font-weight: 200; }
   :global .caption.caption-red .caption-subject,
   :global .caption.caption-red i {
@@ -387,8 +387,8 @@
     :global .actions .btn-primary:not(:disabled):not(.disabled).active,
     :global .actions .btn-primary:not(:disabled):not(.disabled):active,
     :global .actions .show > .btn-primary.dropdown-toggle {
-      background-color: #12a28d;
-      border-color: #17d0b5; }
+      background-color: #00a796;
+      border-color: #00dac4; }
   :global .pagination {
     margin: -3px 0 0;
     border-radius: 50px; }
@@ -450,7 +450,7 @@
   :global .actions .btn.btn-green:hover {
     color: #fff;
     box-shadow: none;
-    background: #17d0b5;
+    background: #00dac4;
     border-color: #01968c; }
   :global .customRadio {
     border-bottom: 1px solid #eee;
@@ -495,13 +495,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customRadio .radio input[type="radio"]:checked + span {
-      color: #17d0b5; }
+      color: #00dac4; }
     :global .customRadio .radio input[type="radio"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #17d0b5;
+      background: #00dac4;
       left: 5px;
       top: 6px;
       border-radius: 100%;
@@ -550,13 +550,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span {
-      color: #17d0b5; }
+      color: #00dac4; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #17d0b5;
+      background: #00dac4;
       left: 5px;
       top: 8px;
       border-radius: 100%;
@@ -687,19 +687,19 @@
           text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
       :global .algaeh-modal .popupFooter .btn-primary {
         color: #fff;
-        background-color: #12a28d;
-        border-color: #0d7465; }
+        background-color: #00a796;
+        border-color: #007468; }
         :global .algaeh-modal .popupFooter .btn-primary:hover {
-          background-color: #0d7465;
-          border-color: #17d0b5; }
+          background-color: #007468;
+          border-color: #00dac4; }
         :global .algaeh-modal .popupFooter .btn-primary:focus {
-          background-color: #12a28d;
-          border-color: #12a28d; }
+          background-color: #00a796;
+          border-color: #00a796; }
         :global .algaeh-modal .popupFooter .btn-primary.disabled, :global .algaeh-modal .popupFooter .btn-primary:disabled {
           opacity: 0.3;
           color: #fff;
-          background-color: #12a28d;
-          border-color: #0d7465;
+          background-color: #00a796;
+          border-color: #007468;
           cursor: not-allowed; }
         :global .algaeh-modal .popupFooter .btn-primary:active {
           background-color: #fff;
@@ -716,9 +716,9 @@
         color: gray;
         border: 1px solid gray; }
         :global .algaeh-modal .popupFooter .btn-other:hover, :global .algaeh-modal .popupFooter .btn-other:focus {
-          background-color: #0d7465;
+          background-color: #007468;
           color: #fff !important;
-          border-color: #17d0b5; }
+          border-color: #00dac4; }
   :global .algaeh-modal-Ar {
     margin: 3% auto 0;
     background-color: #fff;
@@ -805,8 +805,8 @@
         min-width: 70px; }
       :global .algaeh-modal-Ar .popupFooter .btn-primary {
         color: #fff;
-        background-color: #12a28d;
-        border-color: #0d7465; }
+        background-color: #00a796;
+        border-color: #007468; }
       :global .algaeh-modal-Ar .popupFooter .btn-default {
         background: #efefef;
         color: #5a5a5a;
@@ -838,7 +838,7 @@
       text-align: left;
       font-weight: bold;
       text-transform: uppercase;
-      color: #17d0b5;
+      color: #00dac4;
       border: none; }
     :global .cashReciptStyles .table-report .table tbody td:first-child {
       color: #696969;
@@ -989,7 +989,7 @@
         :global .tabMaster ul li:after {
           display: block;
           content: "";
-          border-bottom: 3px solid #12a28d;
+          border-bottom: 3px solid #00a796;
           transform: scaleX(0);
           transition: transform 150ms ease-in-out; }
         :global .tabMaster ul li:hover:after {
@@ -1006,10 +1006,10 @@
         border: none !important;
         cursor: pointer; }
       :global .tabMaster ul li.active label {
-        border-bottom: 3px solid #0d7465;
+        border-bottom: 3px solid #007468;
         color: #fff;
         cursor: pointer;
-        background: #12a28d;
+        background: #00a796;
         text-shadow: 0 1px 1px #868686; }
   :global .divInner {
     overflow-y: auto;
