--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -5,27 +5,63 @@
   .login .LoginCntrHdg {
     margin-top: 0.7em;
     text-align: center;
-    color: #12a28d;
+    color: #fff;
     font-size: 2em; }
   .login .form-group {
     margin-bottom: 0.7em; }
   .login .ui.input > input {
-    min-height: 40px !important;
-    max-height: 40px !important;
-    padding: 0.3em 0.5em;
-    font-size: 1em; }
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0.3em 1em;
+    font-size: 1.3em;
+    font-weight: 400;
+    border-radius: 50px;
+    line-height: 0;
+    background: rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid #fff;
+    color: #fff; }
+    .login .ui.input > input:focus {
+      background: #fff !important;
+      border: 1px solid #fff;
+      color: #000; }
+    .login .ui.input > input::placeholder {
+      color: rgba(255, 255, 255, 0.8) !important;
+      font-weight: 400;
+      line-height: 50px; }
   .login .ui.fluid.dropdown {
-    min-height: 40px !important;
-    max-height: 40px !important; }
+    background: none !important;
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0;
+    box-shadow: none;
+    border: 0; }
+    .login .ui.fluid.dropdown input.search {
+      min-height: 50px !important;
+      max-height: 50px !important;
+      padding: 0.3em 1em !important;
+      font-size: 1.3em !important;
+      font-weight: 400 !important;
+      border-radius: 50px !important;
+      line-height: 0 !important;
+      background: rgba(0, 0, 0, 0.2) !important;
+      border: 1px solid #fff !important;
+      color: #fff; }
     .login .ui.fluid.dropdown .text {
-      padding: 0.9em;
-      max-width: 90%; }
+      padding: 0.97em !important;
+      max-width: 90%;
+      font-size: 1.3em;
+      font-weight: 400;
+      color: #fff; }
+    .login .ui.fluid.dropdown .default {
+      color: rgba(255, 255, 255, 0.8) !important; }
     .login .ui.fluid.dropdown .delete.icon,
     .login .ui.fluid.dropdown .dropdown.icon,
     .login .ui.fluid.dropdown .search.icon {
-      padding: 1em; }
+      color: #ffffff;
+      padding: 0.9rem !important;
+      font-size: 1.5rem; }
   .login .margintop15 {
-    margin-top: 9%; }
+    margin-top: 3%; }
   .login .row-eq-height {
     display: -webkit-box;
     display: -webkit-flex;
@@ -33,38 +69,59 @@
     display: flex; }
   .login .loginFormContainer {
     margin: 5% auto 0;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 10px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12);
     width: 320px; }
+    .login .loginFormContainer .companyLogo {
+      background: url(../../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
+      height: 70px;
+      background-size: 70%;
+      width: 100%; }
   .login .frgtPass {
     text-align: center;
     font-size: 12px;
     margin-top: 20px;
     margin-bottom: 0; }
-  .login .btn-primary {
+  .login .ui.fluid.dropdown .menu {
+    background-color: white;
+    border-radius: 20px;
+    border: none; }
+    .login .ui.fluid.dropdown .menu .item {
+      padding: 18px !important; }
+      .login .ui.fluid.dropdown .menu .item .text {
+        color: #000 !important;
+        padding: 0 !important;
+        width: 100% !important; }
+  .login .btn-secondary {
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0.3em 1em;
+    font-size: 1.3em !important;
+    font-weight: 400;
+    border-radius: 50px;
+    line-height: 0;
     color: #fff;
-    background-color: #12a28d;
-    border-color: #0d7465; }
-    .login .btn-primary:hover {
-      background-color: #0d7465;
-      border-color: #17d0b5; }
-    .login .btn-primary:focus {
-      background-color: #12a28d;
-      border-color: #12a28d; }
-    .login .btn-primary.disabled, .login .btn-primary:disabled {
+    background-color: #f58220;
+    border-color: #d8690a; }
+    .login .btn-secondary:hover {
+      background-color: #d8690a;
+      border-color: #f79d51; }
+    .login .btn-secondary:focus {
+      background-color: #f58220;
+      border-color: #f58220; }
+    .login .btn-secondary.disabled, .login .btn-secondary:disabled {
       opacity: 0.3;
       color: #fff;
-      background-color: #12a28d;
-      border-color: #0d7465;
+      background-color: #f58220;
+      border-color: #d8690a;
       cursor: not-allowed; }
-    .login .btn-primary:active {
+    .login .btn-secondary:active {
       background-color: #fff;
       border-color: #fff; }
   .login .checkbox {
     font-weight: normal;
     margin-bottom: 10px;
-    margin-top: 10px; }
+    padding-left: 20px; }
+  .login .txt-fld {
+    background: none !important; }
 
 .bg {
   background-image: url("../../assets/images/login_bg_HIMS.webp");
@@ -81,13 +138,6 @@
   width: 100%;
   background: #fff;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); }
-  .loginTopbar .companyLogo {
-    float: left;
-    background: url(../../assets/svg/ALGAEH_LOGO.svg) no-repeat center;
-    height: 70px;
-    background-size: 100%;
-    width: 175px;
-    margin-left: 15px; }
   .loginTopbar .productLogo {
     float: right;
     background: url(../../assets/svg/HIMS_LOGO.svg) no-repeat center;
@@ -107,6 +157,6 @@
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); }
   .loginFooter a {
     text-decoration: none;
-    color: yellow; }
+    color: #f58220; }
   .loginFooter a:hover {
     text-decoration: underline; }
