--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -6,7 +6,7 @@
   .LoginCntrHdg {
     margin-top: 0.7em;
     text-align: center;
-    color: $primary-color;
+    color: $color-white;
     font-size: 2em;
   }
 
@@ -14,29 +14,69 @@
     margin-bottom: 0.7em;
   }
   .ui.input > input {
-    min-height: 40px !important;
-    max-height: 40px !important;
-    padding: 0.3em 0.5em;
-    font-size: 1em;
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0.3em 1em;
+    font-size: 1.3em;
+    font-weight: 400;
+    border-radius: 50px;
+    line-height: 0;
+    background: rgba($color-black, 0.2) !important;
+    border: 1px solid $color-white;
+    color: $color-white;
+
+    &:focus {
+      background: $color-white !important;
+      border: 1px solid $color-white;
+      color: $color-black;
+    }
+    &::placeholder {
+      color: rgba($color-white, 0.8) !important;
+      font-weight: 400;
+      line-height: 50px;
+    }
   }
 
   .ui.fluid.dropdown {
-    min-height: 40px !important;
-    max-height: 40px !important;
-
+    background: none !important;
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0;
+    box-shadow: none;
+    border: 0;
+    input.search {
+      min-height: 50px !important;
+      max-height: 50px !important;
+      padding: 0.3em 1em !important;
+      font-size: 1.3em !important;
+      font-weight: 400 !important;
+      border-radius: 50px !important;
+      line-height: 0 !important;
+      background: rgba($color-black, 0.2) !important;
+      border: 1px solid $color-white !important;
+      color: $color-white;
+    }
     .text {
-      padding: 0.9em;
+      padding: 0.97em !important;
       max-width: 90%;
+      font-size: 1.3em;
+      font-weight: 400;
+      color: $color-white;
+    }
+    .default {
+      color: rgba($color-white, 0.8) !important;
     }
 
     .delete.icon,
     .dropdown.icon,
     .search.icon {
-      padding: 1em;
+      color: #ffffff;
+      padding: 0.9rem !important;
+      font-size: 1.5rem;
     }
   }
   .margintop15 {
-    margin-top: 9%;
+    margin-top: 3%;
   }
   .row-eq-height {
     display: -webkit-box;
@@ -46,10 +86,13 @@
   }
   .loginFormContainer {
     margin: 5% auto 0;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 10px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12);
     width: 320px;
+    .companyLogo {
+      background: url(../../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
+      height: 70px;
+      background-size: 70%;
+      width: 100%;
+    }
   }
   .frgtPass {
     text-align: center;
@@ -57,26 +100,47 @@
     margin-top: 20px;
     margin-bottom: 0;
   }
-
-  .btn-primary {
+  .ui.fluid.dropdown {
+    .menu {
+      background-color: white;
+      border-radius: 20px;
+      border: none;
+      .item {
+        padding: 18px !important;
+        .text {
+          color: $color-black !important;
+          padding: 0 !important;
+          width: 100% !important;
+        }
+      }
+    }
+  }
+  .btn-secondary {
+    min-height: 50px !important;
+    max-height: 50px !important;
+    padding: 0.3em 1em;
+    font-size: 1.3em !important;
+    font-weight: 400;
+    border-radius: 50px;
+    line-height: 0;
     color: $color-white;
-    background-color: $primary-color;
-    border-color: darken($primary-color, 10%);
+    background-color: $secondary-color;
+    border-color: darken($secondary-color, 10%);
     &:hover {
-      background-color: darken($primary-color, 10%);
-      border-color: lighten($primary-color, 10%);
+      background-color: darken($secondary-color, 10%);
+      border-color: lighten($secondary-color, 10%);
     }
     &:focus {
-      background-color: $primary-color;
-      border-color: $primary-color;
+      background-color: $secondary-color;
+      border-color: $secondary-color;
     }
     &.disabled,
     &:disabled {
       opacity: 0.3;
 
       color: $color-white;
-      background-color: $primary-color;
-      border-color: darken($primary-color, 10%);
+      background-color: $secondary-color;
+      border-color: darken($secondary-color, 10%);
       cursor: not-allowed;
     }
     &:active {
@@ -88,7 +152,10 @@
   .checkbox {
     font-weight: normal;
     margin-bottom: 10px;
-    margin-top: 10px;
+    padding-left: 20px;
+  }
+  .txt-fld {
+    background: none !important;
   }
 }
 .bg {
@@ -106,14 +173,6 @@
   width: 100%;
   background: #fff;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  .companyLogo {
-    float: left;
-    background: url(../../assets/svg/ALGAEH_LOGO.svg) no-repeat center;
-    height: 70px;
-    background-size: 100%;
-    width: 175px;
-    margin-left: 15px;
-  }
   .productLogo {
     float: right;
     background: url(../../assets/svg/HIMS_LOGO.svg) no-repeat center;
@@ -134,7 +193,7 @@
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
   a {
     text-decoration: none;
-    color: yellow;
+    color: $secondary-color;
   }
   a:hover {
     text-decoration: underline;
