--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -80,6 +80,11 @@
     font-size: 12px;
     margin-top: 20px;
     margin-bottom: 0; }
+    .login .frgtPass a {
+      text-decoration: none;
+      color: #fff; }
+    .login .frgtPass a:hover {
+      text-decoration: underline; }
   .login .ui.fluid.dropdown .menu {
     background-color: white;
     border-radius: 20px;
@@ -152,11 +157,11 @@
   left: 0;
   width: 100%;
   text-align: center;
-  color: #fff;
+  color: #000;
   font-size: 0.7rem;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); }
   .loginFooter a {
     text-decoration: none;
-    color: #f58220; }
+    color: #fff; }
   .loginFooter a:hover {
     text-decoration: underline; }
