--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -6,7 +6,9 @@
     margin-top: 0.7em;
     text-align: center;
     color: #fff;
-    font-size: 2em; }
+    font-size: 2em;
+    font-weight: 400;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5); }
   .login .form-group {
     margin-bottom: 0.7em; }
   .login .ui.input > input {
@@ -79,12 +81,13 @@
     text-align: center;
     font-size: 12px;
     margin-top: 20px;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    color: #fff; }
     .login .frgtPass a {
-      text-decoration: none;
-      color: #fff; }
-    .login .frgtPass a:hover {
+      color: #fff;
       text-decoration: underline; }
+    .login .frgtPass a:hover {
+      text-decoration: none; }
   .login .ui.fluid.dropdown .menu {
     background-color: white;
     border-radius: 20px;
@@ -124,7 +127,8 @@
   .login .checkbox {
     font-weight: normal;
     margin-bottom: 10px;
-    padding-left: 20px; }
+    padding-left: 20px;
+    color: #fff; }
   .login .txt-fld {
     background: none !important; }
 
@@ -157,11 +161,11 @@
   left: 0;
   width: 100%;
   text-align: center;
-  color: #000;
+  color: #fff;
   font-size: 0.7rem;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); }
   .loginFooter a {
-    text-decoration: none;
-    color: #fff; }
-  .loginFooter a:hover {
+    color: #fff;
     text-decoration: underline; }
+  .loginFooter a:hover {
+    text-decoration: none; }
