--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -8,6 +8,8 @@
     text-align: center;
     color: $color-white;
     font-size: 2em;
+    font-weight: 400;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   }
 
   .form-group {
@@ -99,12 +101,13 @@
     font-size: 12px;
     margin-top: 20px;
     margin-bottom: 0;
+    color: $color-white;
     a {
-      text-decoration: none;
       color: $color-white;
+      text-decoration: underline;
     }
     a:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
   .ui.fluid.dropdown {
@@ -160,6 +163,7 @@
     font-weight: normal;
     margin-bottom: 10px;
     padding-left: 20px;
+    color: $color-white;
   }
   .txt-fld {
     background: none !important;
@@ -195,14 +199,14 @@
   left: 0;
   width: 100%;
   text-align: center;
-  color: $color-black;
+  color: $color-white;
   font-size: 0.7rem;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
   a {
-    text-decoration: none;
     color: $color-white;
+    text-decoration: underline;
   }
   a:hover {
-    text-decoration: underline;
+    text-decoration: none;
   }
 }
