--- a/client/src/Components/Dashboard/dashboard.scss
+++ b/client/src/Components/Dashboard/dashboard.scss
@@ -66,8 +66,13 @@
         text-align: center;
       }
     }
+    .table-responsive {
+      width: 97%;
+      margin-left: 1.5%;
+      margin-right: 1.5%;
+    }
     .dashboardGridCntr {
-      margin: 10px;
+      margin-bottom: 5px;
       height: auto;
       position: relative;
       h6 {
