--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -389,3 +389,7 @@ header {
   .passwordCntr .footerBtn button {
     float: right;
     margin-left: 15px; }
+
+@media only screen and (max-width: 600px) {
+  .navTopBarRight {
+    display: none; } }
