RCM Desktop Claim Submission UI clean up + Insurance Image Functionality Pending

--- a/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.css
+++ b/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.css
@@ -1,14 +1,6 @@
-.ClaimValidationPopup {
-  margin-bottom: 15px; }
-  .ClaimValidationPopup .image-drop-area {
-    height: 128px !important; }
-  .ClaimValidationPopup #claimGrid_cntr .ReactTable {
-    height: 20vh !important;
-    margin-top: 15px;
-    margin-bottom: 15px; }
-    .ClaimValidationPopup #claimGrid_cntr .ReactTable .rt-table {
-      overflow-y: hidden; }
-  .ClaimValidationPopup #invoiceDetailGrid_Cntr .ReactTable {
-    height: 43vh !important; }
-  .ClaimValidationPopup #icd_bill_cntr .ReactTable {
-    height: 34.5vh !important; }
+#ClaimGrid_Cntr .ReactTable,
+#invoiceDetailGrid_Cntr .ReactTable {
+  max-height: 31vh !important; }
+
+#icd_bill_Grid .ReactTable {
+  max-height: 18vh !important; }
