--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
@@ -53,3 +53,30 @@
     .patIDCard .cardFooter p {
       text-align: center;
       width: 100%; }
+
+.ucafEditCntr {
+  display: none; }
+  .ucafEditCntr .receptionNurse {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px; }
+    .ucafEditCntr .receptionNurse h5 {
+      margin-bottom: 10px; }
+  .ucafEditCntr .IDCardUcaf {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px; }
+    .ucafEditCntr .IDCardUcaf h5 {
+      margin-bottom: 10px; }
+  .ucafEditCntr .attendingPhysician {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px; }
+    .ucafEditCntr .attendingPhysician h5 {
+      margin-bottom: 10px; }
