--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.scss
@@ -67,3 +67,37 @@
     }
   }
 }
+.ucafEditCntr {
+  display: none;
+  .receptionNurse {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px;
+    h5 {
+      margin-bottom: 10px;
+    }
+  }
+
+  .IDCardUcaf {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px;
+    h5 {
+      margin-bottom: 10px;
+    }
+  }
+  .attendingPhysician {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+    margin-bottom: 10px;
+    h5 {
+      margin-bottom: 10px;
+    }
+  }
+}
