Basic EHR ordering screen done

--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -58,3 +58,11 @@
     }
   }
 }
+
+.grid-section {
+  background: #ffff;
+  border: 1px solid #d3d3d3;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
