--- a/client/src/Components/PatientProfile/Subjective/subjective.css
+++ b/client/src/Components/PatientProfile/Subjective/subjective.css
@@ -43,3 +43,10 @@
   display: inline-block; }
   .durationCntr .divDay .Select-input {
     height: 30px; }
+
+.grid-section {
+  background: #ffff;
+  border: 1px solid #d3d3d3;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px; }
