--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -66,3 +66,16 @@
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
 }
+.rightActionIcon {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background: $fff;
+    padding: 20px;
+    font-size: 1.5rem;
+  }
+}
