--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -1,3 +1,4 @@
+@import "../../../styles/algaehCssVariables.scss";
 .subjective {
   .left-pane {
     padding: 5px;
@@ -16,7 +17,7 @@
       text-transform: uppercase;
 
       min-width: auto !important;
-      color: #fff;
+      color: $color-white;
       font-weight: normal;
     }
     td {
@@ -70,12 +71,25 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 45px;
+  float: right;
   li {
     list-style: none;
-    margin: 0;
+    margin: 0 0 5px 0;
     padding: 0;
-    background: $fff;
-    padding: 20px;
-    font-size: 1.5rem;
+    background: $color-white;
+    font-size: 1rem;
+    border-radius: 7px 0 0 7px;
+    text-align: center;
+    width: 45px;
+    line-height: 45px;
+    height: 45px;
+    /* float: right; */
+    display: block;
+    &:hover {
+      color: $color-white;
+      background: $primary-color;
+      cursor: pointer;
+    }
   }
 }
