--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -185,11 +185,11 @@
         }
         span.active {
           border-bottom: solid 3px $primary-color;
-          color: #fff;
+          color: $color-white;
           background: $primary-color;
           &:hover {
             cursor: default;
-            color: #fff;
+            color: $color-white;
           }
           &:hover:after {
             display: none !important;
@@ -224,7 +224,7 @@
           z-index: 9;
           padding: 10px;
           border-radius: 5px;
-          color: #fff;
+          color: $color-white;
           display: none;
           b.top-nav-sec-hdg {
             text-align: center;
@@ -245,7 +245,7 @@
             border: 1px solid darken($primary-color, 10%);
             padding: 3px 10px;
             margin: 0;
-            color: #fff;
+            color: $color-white;
             margin-right: 5px;
             margin-bottom: 3px;
             border-radius: 20px;
@@ -263,7 +263,7 @@
       }
       li:hover {
         background: darken($primary-color, 10%);
-        color: #fff;
+        color: $color-white;
         padding: 4px 10px;
         section {
           display: block;
@@ -286,7 +286,7 @@
   position: absolute;
   right: 11px;
   border-radius: 5px 0px 5px 5px;
-  background: #fff;
+  background: $color-white;
   display: none;
   min-width: 100px;
   overflow: hidden;
@@ -302,11 +302,27 @@
       cursor: pointer;
     }
     span:hover {
-      color: #fff;
+      color: $color-white;
       background: $primary-color;
     }
   }
 }
 .moreAction:hover .moreActionUl {
   display: block;
+}
+.miniActionIcon {
+  border: 1px solid $color-white;
+  border-radius: 100px;
+  height: 24px !important;
+  width: 24px !important;
+  padding: 0 !important;
+  color: $color-white !important;
+  text-align: center !important;
+  line-height: 21px;
+  margin-left: 10px;
+  &:hover {
+    cursor: pointer;
+    background: $color-white !important;
+    color: $primary-color !important;
+  }
 }
