--- a/client/src/Components/InsuranceSetup/InsuranceAdd/InsuranceAdd.scss
+++ b/client/src/Components/InsuranceSetup/InsuranceAdd/InsuranceAdd.scss
@@ -1,5 +1,7 @@
+@import "../../../styles/algaehCssVariables.scss";
+
 .hptl-phase1-add-insurance-form {
-  background: #fff;
+  background: $color-white;
   border-radius: 5px;
 }
 
@@ -15,5 +17,58 @@
         }
       }
     }
+  }
+}
+
+.progressbar {
+  counter-reset: step;
+  padding: 0 0 10px;
+  margin: 15px 0;
+  border-bottom: 1px solid lighten($color-black, 90%);
+  li {
+    list-style: none;
+    display: inline-block;
+    width: 25%;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+  }
+  li:before {
+    content: counter(step);
+    counter-increment: step;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid lighten($color-black, 90%);
+    border-radius: 100%;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px auto;
+    background-color: $color-white;
+  }
+  li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: lighten($color-black, 90%);
+    top: 15px;
+    left: -45.5%;
+    z-index: -1;
+  }
+  li:first-child:after {
+    content: none;
+  }
+  li.active {
+    color: $primary-color;
+  }
+  li.active:before {
+    border-color: $primary-color;
+    background-color: $primary-color;
+    color: $color-white;
+  }
+  li.active + li:after {
+    background-color: $primary-color;
   }
 }
