--- a/client/src/Components/Wrapper/spotlight.css
+++ b/client/src/Components/Wrapper/spotlight.css
@@ -56,13 +56,14 @@
 #spotlightResultArea {
   background-color: #f9f5f4;
   width: 100%;
-  max-height: 350px;
   overflow: auto; }
   #spotlightResultArea .ReactTable {
-    max-height: 349px !important; }
+    max-height: 54vh !important; }
+  #spotlightResultArea .gridToolSec {
+    margin: 0 !important; }
 
 .helpText {
-  height: 35px;
+  height: 32px;
   width: 70vw;
   margin: 0 auto;
   text-align: right;
