--- a/client/src/Components/PhysicianScheduleSetup/phy_sch_setup.scss
+++ b/client/src/Components/PhysicianScheduleSetup/phy_sch_setup.scss
@@ -1,2 +1,13 @@
 .phy-sch-setup {
+  .physicianList {
+    max-height: 37vh;
+    li {
+      margin: 0 !important;
+      padding: 0 !important;
+      input[type="checkbox"],
+      input[type="radio"] {
+        margin: 5px 10px 5px 5px !important;
+      }
+    }
+  }
 }
