--- a/client/src/index.css
+++ b/client/src/index.css
@@ -351,6 +351,7 @@
     font-weight: 400; }
   :global .caption-subject {
     color: #666;
+    font-size: 1.2rem;
     font-weight: normal;
     line-height: 26px;
     margin-bottom: 0; }
