--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -541,7 +541,7 @@
 
   .caption-subject {
     color: #666;
-
+    font-size: 1.2rem;
     font-weight: normal;
     line-height: 26px;
     margin-bottom: 0;
